--- a/src/main/resources/application-model.properties
+++ b/src/main/resources/application-model.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/spring_project
 spring.datasource.username=YOUR_USER
 spring.datasource.password=YOUR_PASSWORD
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
