--- a/config/application-model.properties
+++ b/config/application-model.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/spring_project?createDatabaseIfNotExist=true
+spring.profiles.active=local
 spring.datasource.username=YOUR_USER
 spring.datasource.password=YOUR_PASSWORD
